5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1575_1333.log
== TEST (2019-03-24 19:28:50) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + ( 8 // 3) ** 2 * 10
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:28:54) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + ( 8 // 3) ** 2 * 10
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:28:55) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + ( 8 // 3) ** 2 * 10
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:28:55) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + ( 8 // 3) ** 2 * 10
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:28:57) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + ( 8 // 3) ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.132638
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:29:27) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + (( 8 // 3) ** 2 ) * 10
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:29:30) 
-- CODE:
expressao = 30 - ( 3 ** 2 ) + (( 8 // 3) ** 2 ) * 10
print(expressao)
-- EXECUTION TIME:
0.226662
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:30:05) 
-- CODE:
expressao = 30 - ( 3 )** 2 + (( 8 // 3) ** 2 ) * 10
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:30:13) 
-- CODE:
expressao = 30 - ( 3 )** 2 + (( 8 // 3) ** 2 ) * 10
print(expressao)
-- EXECUTION TIME:
0.213563
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:30:33) 
-- CODE:
expressao = 30 - ( 3 )** 2 + (( 8 // (3) ** 2 ) * 10
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:30:47) 
-- CODE:
expressao = 30 - ( 3 )** 2 + ( 8 // (3 ** 2) ) * 10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:30:49) 
-- CODE:
expressao = 30 - ( 3 )** 2 + ( 8 // (3 ** 2) ) * 10
print(expressao)
-- EXECUTION TIME:
0.188251
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
